노란줄 수정 / 유채원 / 02-15 10:48 [주요내용] - 노란줄 수정 	welfare-main.html, welfare-detail.html, WelfareController.java, WelfareService.java 	playground.html, PlaygroundController.java, PlaygroundService.java, PlaygroundMapper.java 	hospital-main.html, hospital-detail.html, HospitalController.java

--- a/src/main/resources/templates/hospital-detail.html
+++ b/src/main/resources/templates/hospital-detail.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
     <title>UKIDS | 병원</title>
-    <!-- SEO Meta Tags
-    <meta name="description" content="Cartzilla - Bootstrap E-commerce Template">
-    <meta name="keywords" content="bootstrap, shop, e-commerce, market, modern, responsive,  business, mobile, bootstrap, html5, css3, js, gallery, slider, touch, creative, clean">
-    <meta name="author" content="Createx Studio"> -->
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon and Touch Icons-->
@@ -46,7 +42,6 @@
     </style>
   </head>
 
-  <!-- Body-->
   <body class="handheld-toolbar-enabled">
 
     <!-- 로그인 모달 관련  -->
@@ -54,10 +49,9 @@
 
     <main class="page-wrapper">
 
-      <!-- 헤더!!!!!! -->
+      <!-- 헤더 -->
       <header th:fragment="header" th:replace="~{common :: header}"></header>
 
-			<!-- 병원 상세 시작!!!!!!! -->
       <!-- Page Title-->
       <section class="position-relative bg-dark bg-size-cover bg-position-center-x py-5 mb-4" id="mainImg">
         <div class="container position-relative zindex-5 mb-3">
@@ -76,8 +70,7 @@
         </div>
       </section>
 
-
-      <!-- Shadow box-->
+			<!-- 아동복지시설 상세 정보 -->
       <section class="container mb-5 pb-5">
         <div class="bg-light shadow-lg rounded-3 overflow-hidden">
           <div class="row">
@@ -105,8 +98,6 @@
 	                      <span class="gallery-item-caption">[[${nightcare.hpName}]]</span>
 	                    </a>
                   	</th:block>
-                  
-                    
                   </div>
                   
                   <!-- 상세 정보 -->
@@ -335,15 +326,10 @@
         </div>
       </section>
 
-
-
-
     </main>
 
-    <!-- 푸터!!!!!!!!!!-->
     <!-- Footer-->
     <footer th:fragment="footer" th:replace="~{common :: footer}"></footer>
-    
     
     <!-- Toolbar for handheld devices (Default)-->
     <div class="handheld-toolbar"><div class="d-table table-layout-fixed w-100"><a class="d-table-cell handheld-toolbar-item" href="account-wishlist.html"><span class="handheld-toolbar-icon"><i class="ci-heart"></i></span><span class="handheld-toolbar-label">Wishlist</span></a><a class="d-table-cell handheld-toolbar-item" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" onclick="window.scrollTo(0, 0)"><span class="handheld-toolbar-icon"><i class="ci-menu"></i></span><span class="handheld-toolbar-label">Menu</span></a><a class="d-table-cell handheld-toolbar-item" href="shop-cart.html"><span class="handheld-toolbar-icon"><i class="ci-cart"></i><span class="badge bg-primary rounded-pill ms-1">4</span></span><span class="handheld-toolbar-label">$265.00</span></a></div></div>
