--- a/src/main/resources/templates/view-community.html
+++ b/src/main/resources/templates/view-community.html
@@ -97,6 +97,7 @@
                   			<h3>[[${board.title}]]</h3>
                   			
                 		</div>
+                		<div >[[${board.id}]]</div>
                 		<span class="mamamoo">조회</span><span class="ms-1 me-1">[[${board.readcount}]]</span>
                 		<span class="ms-2">[[${#dates.format(board.createDate ,'yyyy/MM/dd')}]]</span>
         			</div>
