--- a/src/main/resources/templates/write-comm.html
+++ b/src/main/resources/templates/write-comm.html
@@ -31,8 +31,7 @@
 
     <!--해당 페이지 css-->
 
-    <!--jquery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    
 
     <!-- 폰트 -->
     <style>
@@ -142,7 +141,7 @@
           </table>
           <div class="container-sm text-center mb-4">
             <input class="btn bbtn3 bbtn-primary me-2" type="submit" value="등 록">
-            <a class="btn btn-outline-primary moc ms-2 ps-3 pe-3" th:href="|/community/${type}|" role="button">목록으로</a>
+            <a class="btn btn-outline-primary moc ms-2 ps-3 pe-3" href="community.html" role="button">목록으로</a>
           </div>
         </form>
       </div>
