--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -103,6 +103,15 @@
           <table class="table " style="border-color: white;">
             <thead>
               <tr>
+                <th class="col2-1 align-middle text-center">구분</th>
+                <th class="col-5 text-center">
+                  <select class="form-select" id="select-input">
+                    <option>자유게시판</option>
+                    <option>공지사항</option>
+                  </select>
+                </th>
+              </tr>
+              <tr>
                 <th class="col2-1 align-middle text-center">작성자</th>
                 <th class="col-5 text-center">
                 <input class="form-control" type="text" name="id" th:value="${session.loginMember.id}" readonly>
@@ -135,7 +144,7 @@
           </table>
           <div class="container-sm text-center mb-4">
             <input class="btn bbtn3 bbtn-primary me-2" type="submit" value="수 정">
-            <a class="bbtn2 btn-outline-ppink " th:href="|/community/${type}|">글목록</a>
+            <a class="btn btn-outline-primary moc ms-2 ps-3 pe-3" th:href="|/community/${type}|" role="button">목록으로</a>
           </div>
         </form>
       </div>
