--- a/src/main/resources/templates/community.html
+++ b/src/main/resources/templates/community.html
@@ -10,9 +10,9 @@
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon and Touch Icons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="img/ukids/logo.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/ukids/logo.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ukids/logo.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/ukids/logo.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/ukids/logo.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/ukids/logo.jpg">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" color="#fe6a6a" href="safari-pinned-tab.svg">
     <meta name="msapplication-TileColor" content="#ffffff">
