입소 신청 / 이다영 / 02-15 11:47
[주요 내용]

- 입소신청 희망학급도 DB에 저장

--- a/src/main/resources/templates/kinder-detail.html
+++ b/src/main/resources/templates/kinder-detail.html
@@ -84,15 +84,15 @@
                     <label class="form-label fs-6">희망학급</label>
                     <div class="mb-3 fs-5">
                       <div class="form-check form-check-inline" id="classBox">
-                        <input class="form-check-input radio-pink" type="radio" id="class3" name="classSort" required>
+                        <input class="form-check-input radio-pink" type="radio" id="class3" name="hopeClass" value="3세반" required>
                         <label class="form-check-label" for="class3">3세반</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input radio-pink" type="radio" id="class4" name="classSort">
+                        <input class="form-check-input radio-pink" type="radio" id="class4" name="hopeClass" value="4세반">
                         <label class="form-check-label" for="class4">4세반</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input radio-pink" type="radio" id="class5" name="classSort">
+                        <input class="form-check-input radio-pink" type="radio" id="class5" name="hopeClass" value="5세반">
                         <label class="form-check-label" for="class5">5세반</label>
                       </div>
                     </div>
