--- a/src/main/resources/templates/nursery-detail.html
+++ b/src/main/resources/templates/nursery-detail.html
@@ -85,28 +85,28 @@
                     <label class="form-label fs-6">희망학급</label>
                     <div class="mb-3 fs-5">
                       <div class="form-check form-check-inline" id="classBox">
-                        <input class="form-check-input radio-pink" type="radio" id="class0" name="classSort" required>
-                        <label class="form-check-label" for="class0">만0세반</label>
+                        <input class="form-check-input radio-pink" type="radio" id="class0" name="hopeClass" value="만 0세반" required>
+                        <label class="form-check-label" for="class0">만 0세반</label>
                       </div>
                       <div class="form-check form-check-inline" id="classBox">
-                        <input class="form-check-input radio-pink" type="radio" id="class1" name="classSort">
-                        <label class="form-check-label" for="class1">만1세반</label>
+                        <input class="form-check-input radio-pink" type="radio" id="class1" name="hopeClass" value="만 1세반">
+                        <label class="form-check-label" for="class1">만 1세반</label>
                       </div>
                       <div class="form-check form-check-inline" id="classBox">
-                        <input class="form-check-input radio-pink" type="radio" id="class2" name="classSort">
-                        <label class="form-check-label" for="class2">만2세반</label>
+                        <input class="form-check-input radio-pink" type="radio" id="class2" name="hopeClass" value="만 2세반">
+                        <label class="form-check-label" for="class2">만 2세반</label>
                       </div><br>
                       <div class="form-check form-check-inline" id="classBox">
-                        <input class="form-check-input radio-pink" type="radio" id="class3" name="classSort">
-                        <label class="form-check-label" for="class3">만3세반</label>
+                        <input class="form-check-input radio-pink" type="radio" id="class3" name="hopeClass" value="만 3세반">
+                        <label class="form-check-label" for="class3">만 3세반</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input radio-pink" type="radio" id="class4" name="classSort">
-                        <label class="form-check-label" for="class4">만4세반</label>
+                        <input class="form-check-input radio-pink" type="radio" id="class4" name="hopeClass" value="만 4세반">
+                        <label class="form-check-label" for="class4">만 4세반</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input radio-pink" type="radio" id="class5" name="classSort">
-                        <label class="form-check-label" for="class5">만5세반</label>
+                        <input class="form-check-input radio-pink" type="radio" id="class5" name="hopeClass" value="만 5세반">
+                        <label class="form-check-label" for="class5">만 5세반</label>
                       </div>
                     </div>
                     <div class="mb-3">
