게시판/박태성/02-15 11:59 [상세내용] 목록으로 돌아가는 부분 경로 수정

--- a/src/main/resources/templates/write-comm.html
+++ b/src/main/resources/templates/write-comm.html
@@ -141,7 +141,8 @@
           </table>
           <div class="container-sm text-center mb-4">
             <input class="btn bbtn3 bbtn-primary me-2" type="submit" value="등 록">
-            <a class="btn btn-outline-primary moc ms-2 ps-3 pe-3" href="community.html" role="button">목록으로</a>
+            <input type="button" class="btn btn-outline-primary moc ms-2 ps-3 pe-3" value="목록으로" onClick="history.back();">
+            <!--  <button class="btn btn-outline-primary moc ms-2 ps-3 pe-3" onclick="history.go(-4)">목록으로</button>-->
           </div>
         </form>
       </div>
