--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="css/news.css">
 
     <!--해당 페이지 css-->
 
@@ -97,7 +98,7 @@
 
     <!-- 게시판-->
   
-  <div class="container-sm shadow mb-5">
+  <div class="container-sm shadow mb-6">
 <div class="table-responsive">
   
   <div class=" mt-3 mb-2" >
